...
      SWAP_TRANSACTION: 'Swap Transaction',
      SWAP_APPROVAL_DISCLAIMER:
        'A small amount of network fees is associated with this request',
      SWAP_QUOTE_EXPIRED:
        "Swap quote expired! Please try again by clicking on 'Get Quote'",
      SKIP_FOR_NOW: 'SKIP FOR NOW',
      CREATE_SEED_PHRASE_TYPE_TITLE: 'I would like to generate a',
      TWELVE_WORD_SEEDPHRASE: '12 Word Seedphrase',
      TWENTY_FOUR_WORD_SEEDPHRASE: '24 Word Seedphrase',
      TRANSFI_BUY: 'Buy with TransFi',
      TRANSFI_SELL: 'Sell with TransFi',
      TRANSFI: 'TransFi',
      NOTE: 'Note:',
...
