...
              {
                'Choose a Mnemonic phrase of either 12 or 24 words \nthat you want to create!'
              }
            </CyDText>
            <CyDView className='mt-[24px] bg-n0 rounded-[8px] p-[16px]'>
              <CyDTouchView
                testID='options-12word-option'
                className='flex flex-row items-center justify-between '
                onPress={() => {
                  setSelectedSeedPhraseCount(SeedPhraseType.TWELVE_WORDS);
                }}>
                <CyDText className='text-[16px] font-semibold'>
                  {'12 Word Phrase'}
...
                  {'Most secure '}
                </CyDText>
              </CyDView>
            </CyDView>

            <CyDTouchView
              testID='options-seedcount-continue-btn'
              className='flex flex-row items-center justify-center gap-x-[4px] mt-[16px] bg-p100 rounded-[30px] py-[14px]'
              onPress={() => {
                navigateToSeedPhraseGeneration(selectedSeedPhraseCount);
              }}>
              <CyDText className='text-[16px] font-bold text-black'>
                {t('CONTINUE', 'Continue')}
...
              {
                'You can import your wallet using either a seed phrase \nor a private key.'
              }
            </CyDText>
            <CyDView className='mt-[24px] bg-n0 rounded-[8px] p-[16px]'>
              <CyDTouchView
                testID='options-import-seed-option'
                className='flex flex-row items-center justify-between '
                onPress={() => {
                  setIsImportWalletModalVisible(false);
                  navigation.navigate(screenTitle.ENTER_KEY);
                }}>
                <CyDView className='flex flex-row items-center gap-x-[12px]'>
...
                <CyDText className='text-n200 text-[14px] mb-[32px]'>
                  {t('ONBOARDING_IF_YOU_DONT_HAVE_WALLET')}
                </CyDText>

                {/* Create New Wallet Button */}
                <CyDTouchView
                  testID='options-create-wallet-btn'
                  onPress={handleCreateNewWallet}
                  className='flex-row items-center bg-n0 rounded-full p-[16px] mb-[16px]'>
                  <CyDImage
                    source={AppImages.CREATE_WALLET}
                    className='w-[24px] h-[24px] mr-[12px]'
                    resizeMode='contain'
...
                <CyDText className='text-n200 text-[14px] mb-[16px]'>
                  {t('ONBOARDING_IF_YOUVE_GOT_WALLET')}
                </CyDText>

                {/* Import existing wallet Button */}
                <CyDTouchView
                  testID='options-import-wallet-btn'
                  onPress={handleImportWallet}
                  className='flex-row items-center bg-n0 rounded-full p-[16px] mb-[16px]'>
                  <CyDImage
                    source={AppImages.IMPORT_WALLET}
                    className='w-[24px] h-[24px] mr-[12px]'
                    resizeMode='contain'
...
                  className='text-base400'
                />
              </CyDTouchView>

              {/* Continue with Wallets Button */}
              <CyDTouchView
                testID='options-wallets-btn'
                onPress={handleContinueWithWallets}
                className='flex-row items-center bg-p40 border border-n40 rounded-full p-[16px] mb-[24px]'>
                <CyDView className='flex-1 flex-row items-center mr-[12px]'>
                  <CyDMaterialDesignIcons
                    name='wallet-outline'
                    size={24}
...
