...
              {`🕛 ${formatTime(totalSeconds)}`}
            </CyDText>
          </CyDView>

          {/* Got It Button with checkmark */}
          <CyDTouchView
            testID='exclusive-offer-got-it-btn'
            onPress={() => {
              if (!isLoading) {
                void handleGotIt();
              }
            }}
            className={`bg-white rounded-full py-[16px] px-[24px] w-[364px] flex-row items-center justify-center `}
...
