...

          {/* Fixed Bottom Section */}
          <CyDSafeAreaView edges={['bottom']} className='bg-n20 pt-[8px]'>
            {/* Continue Button */}
            <CyDView className='px-[20px] mb-[20px]'>
              <Button
                testID='seedphrase-continue-btn'
                title='Continue'
                loading={isProceeding}
                onPress={() => {
                  void proceedToPortfolio();
                }}
                type={ButtonType.PRIMARY}
...
