...
      </CyDView>
      <CyDView
        className={clsx(
          'absolute w-full bottom-[0px] bg-n0 pt-[10px] pb-[32px] px-[16px] shadow-md shadow-n40',
        )}>
        <Button
          testID='choose-wallet-submit-btn'
          type={ButtonType.PRIMARY}
          title={t('SUBMIT_FIRST_LETTER_CAPS')}
          onPress={() => {
            setLoading(true);
            hdWalletContext.dispatch({
              type: 'SET_CHOOSEN_WALLET_INDEX',
...
