...
        ]
      : []),
    {
      icon: 'settings',
      apiDependent: false,
      title: t('ADVANCED_SETTINGS'),
      testID: 'options-advanced-settings',
      onPress: () => {
        navigation.navigate(screenTitle.ADVANCED_SETTINGS);
      },
    },
  ];

...
              <CyDView className='flex-1 bg-base200 h-[0.5px]' />
              <CyDTouchView
                onPress={() => {
                  void handleVersionClick();
                }}>
                <CyDText
                  testID='options-version-text'
                  className='text-[10px] font-regular text-base300'>
                  {t<string>('VERSION')} {DeviceInfo.getVersion()}
                  {isDeveloperMode && ' 🔧'}
                </CyDText>
              </CyDTouchView>
              <CyDView className='flex-1 bg-base200 h-[0.5px]' />
...
