...
            }}
            value={IBCStatus}
          />
        </CyDView>
        <CyDView className={'h-[01px] my-[14px] bg-n40'} />
        <CyDTouchView
          testID='advanced-hosts-rpc'
          onPress={() => {
            navigation.navigate(screenTitle.HOSTS_AND_RPC_SCREEN);
          }}
          className={'flex flex-row justify-between items-center'}>
          <CyDView>
            <CyDText className={'font-bold text-[18px]'}>
...
